fix: the tag is too long

--- a/packages/core/client/src/schema-component/antd/index.less
+++ b/packages/core/client/src/schema-component/antd/index.less
@@ -30,3 +30,7 @@
     margin-bottom: 12px !important;
   }
 }
+
+.ant-formily-item-control-content-component .ant-tag {
+  white-space: pre-wrap;
+}
